# murmur

./: .gitattributes  .gitignore  AGENTS.md  CHECKPOINT.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PERSONA_ISSUES.md  PRIVACY.md  README.md  RELEASE_NOTES_v0.2.0.md  TERMS.md  build-macos.sh  build.sh  deny.toml  dev.ps1  prd.md  run.sh
.cargo/: config.toml
.github/workflows/: build-linux.yml  ci.yml  macos-build.yml  release-macos.yml  release.yml
config/: default.toml
crates/murmur-app/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
crates/murmur-app/capabilities/: default.json
crates/murmur-app/frontend/: caption.css  caption.html  caption.js  components.css  dashboard.css  fonts.css  index.html  main.js  style.css  widget.css  widget.html  widget.js
crates/murmur-app/frontend/js/: analytics.js  commandmode.js  dashboard.js  dom.js  help.js  main.js  meetings.js  onboarding.js  rewrite.js  settings.js  transcription.js  ui.js  updater.js  viz.js  whatsnew.data.js  whatsnew.js
crates/murmur-app/icons/: icon.icns
crates/murmur-app/src/: audio_worker.rs  calibration.rs  caption.rs  command_exec.rs  command_mode.rs  commands.rs  dictation_trigger.rs  focus.rs  idle_unload.rs  input.rs  lib.rs  main.rs  meeting_commands.rs  meeting_worker.rs  model_setup.rs  native_actions.rs  preview.rs  rewrite.rs  session.rs  sound.rs  state.rs  transcribe.rs  updater.rs  watcher.rs
crates/murmur-app/src/local_api/: discovery.rs  mod.rs  protocol.rs  server.rs
crates/murmur-app/src/meeting_worker/: cut.rs  spool.rs
crates/murmur-cli/: Cargo.toml
crates/murmur-cli/src/: main.rs  mcp.rs  mcp_install.rs
crates/murmur-core/: .gitignore  Cargo.toml
crates/murmur-core/examples/: loopback_probe.rs
crates/murmur-core/src/: cloud.rs  commit.rs  dictation.rs  dictation_junction.rs  dictation_request.rs  dictation_submit.rs  download.rs  emoji.rs  filler.rs  fsutil.rs  history.rs  hotkey.rs  insights.rs  integrity.rs  lib.rs  vocab_correct.rs  voice_commands.rs
crates/murmur-core/src/audio/: aec_health.rs  capture.rs  dsp.rs  loopback.rs  mod.rs  pulse.rs  pulse_aec.rs  silence.rs  vad.rs  warm.rs  wasapi.rs
crates/murmur-core/src/command/: error.rs  formatters.rs  grammar.rs  intent.rs  mod.rs  permissions.rs  router.rs  tool.rs
crates/murmur-core/src/config/: mod.rs  settings.rs
crates/murmur-core/src/help/: embed.rs  mod.rs
crates/murmur-core/src/help/articles/: app-profiles.md  codebase-vocabulary.md  developer-mode.md  diagnostics.md  floating-pill.md  getting-started.md  history-analytics.md  integrations-updates.md  meetings.md  microphone-audio.md  models.md  output-delivery.md  privacy-data.md  shortcuts-reference.md  snippets-dictionary.md  troubleshooting.md  voice-commands.md
crates/murmur-core/src/indexer/: aliases.rs  extract.rs  mod.rs  rank.rs  resolve.rs  treesitter.rs
crates/murmur-core/src/llm/: catalog.rs  engine.rs  mod.rs  rewrite.rs
crates/murmur-core/src/meeting/: assembly.rs  diarize.rs  mixer.rs  mod.rs  record.rs  spool.rs  summary.rs
crates/murmur-core/src/output/: clipboard.rs  keyboard.rs  mod.rs  paste.rs
crates/murmur-core/src/stt/: engine.rs  mod.rs  models.rs  postprocess.rs  runtime.rs
crates/murmur-core/tests/: command_route.rs  intent_classify.rs  llm_generate.rs  llm_rewrite.rs  parakeet_v3_model.rs
crates/murmur-mcp/: Cargo.toml
crates/murmur-mcp/src/: client.rs  install.rs  lib.rs  server.rs  wait.rs
crates/murmur-mcp/tests/: client_roundtrip.rs
crates/voitex-app/: Cargo.toml  tauri.conf.json
crates/voitex-app/capabilities/: default.json
crates/voitex-app/frontend/: index.html  main.js  style.css  widget.css  widget.html  widget.js
crates/voitex-app/src/: lib.rs  main.rs
crates/voitex-cli/: Cargo.toml
crates/voitex-cli/src/: main.rs
crates/voitex-core/: Cargo.toml
crates/voitex-core/src/: hotkey.rs
crates/voitex-core/src/audio/: capture.rs  mod.rs  silence.rs
crates/voitex-core/src/config/: settings.rs
crates/voitex-core/src/output/: keyboard.rs  mod.rs  stdout.rs
crates/voitex-core/src/stt/: engine.rs  mod.rs  models.rs  runtime.rs
docs/: local-api.md
editors/vscode/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
editors/vscode/src/: client.ts  extension.ts  protocol.ts
editors/vscode/test/: client.test.ts  protocol.test.ts
scripts/: release.sh  release.test.sh
