[workspace]
resolver = "2"
members = [
    "crates/voitex-core",
    "crates/voitex-cli",
    "crates/voitex-app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.93"

[workspace.dependencies]
voitex-core = { path = "crates/voitex-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
