[workspace]
resolver = "2"
members = [
    "crates/murmur-core",
    "crates/murmur-cli",
    "crates/murmur-app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.93"

[workspace.dependencies]
murmur-core = { path = "crates/murmur-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
parakeet-rs = { version = "0.3", default-features = false }
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"
