[workspace]
resolver = "2"
members = [
    "crates/murmur-core",
    "crates/murmur-cli",
    "crates/murmur-app",
    "crates/murmur-mcp",
]

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT"
rust-version = "1.93"

[profile.release]
# More codegen units = smaller chunks per unit = lower peak memory in rustc-LLVM.
# Avoids OOM during codegen of large crates (murmur-app/src/lib.rs) on Windows.
codegen-units = 256

[workspace.dependencies]
murmur-core = { path = "crates/murmur-core" }
murmur-mcp = { path = "crates/murmur-mcp" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
parakeet-rs = { version = "0.3", default-features = false }
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"
