[package]
name = "murmur-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Tauri v2 desktop app for Murmur voice-to-text tool"

[features]
default = ["full"]
full = ["murmur-core/full", "vad"]
vad = ["murmur-core/vad"]
# CUDA GPU acceleration for whisper (build.sh enables this automatically
# when the CUDA toolkit is installed)
cuda = ["murmur-core/cuda"]
# macOS build: everything except Parakeet, whose DirectML execution
# provider is Windows-only. Whisper runs on Metal/Accelerate on macOS.
macos = ["murmur-core/audio", "murmur-core/stt", "murmur-core/keyboard", "vad"]

[lib]
name = "murmur_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
murmur-core.workspace = true
tauri = { version = "2", features = ["tray-icon"] }
serde.workspace = true
serde_json = "1"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"
anyhow.workspace = true
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
rdev = "0.5"
cpal = "0.15"
