[package]
name = "murmur-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Tauri v2 desktop app for Murmur voice-to-text tool"

[features]
default = ["full"]
full = ["murmur-core/full", "vad"]
vad = ["murmur-core/vad"]
# CUDA GPU acceleration for whisper (build.sh enables this automatically
# when the CUDA toolkit is installed)
cuda = ["murmur-core/cuda"]
vulkan = ["murmur-core/vulkan"]
# Local LLM for Command Mode selection rewrites. Deliberately NOT part of
# `full`: it compiles llama.cpp (cmake + libclang). Without it the app still
# builds and rewrite_selection reports the LLM as unavailable.
llm = ["murmur-core/llm"]

[lib]
name = "murmur_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
murmur-core = { workspace = true, features = ["indexer"] }
# MCP server + client setup, shared with the CLI. Lets `murmur-app mcp` act as
# a stdio MCP server and the Settings button wire up Cursor / Claude.
murmur-mcp.workspace = true
tauri = { version = "2", features = ["tray-icon"] }
serde.workspace = true
serde_json = "1"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"
anyhow.workspace = true
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
rdev = "0.5"
cpal = "0.15"
unicode-segmentation = "1"
notify = "6"
notify-debouncer-mini = "0.4"
# Key chords for native voice commands (native_actions::send_keys); same
# version as murmur-core's keyboard feature, so no new tree entry.
enigo = "0.6"
# Selection capture for Command Mode rewrites (rewrite.rs); same version as
# murmur-core's clipboard output, so no new tree entry.
arboard = "3"
# Local WebSocket API for editor plugins (local_api). Server-side only, no
# TLS: loopback traffic never leaves the machine. 0.29 reuses the sha1/digest
# stack already in the tree; 0.30 would drag in a second digest stack.
tokio-tungstenite = { version = "0.29", default-features = false, features = ["handshake"] }
# Auth token for the local API discovery file; version already in the tree.
getrandom = "0.4"
# Drives the WebSocket Stream/Sink halves; already in the tree via tauri.
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

# UI Automation: locate the focused input so the live caption anchors by the
# text field, not the window bottom (caption::focused_input_rect). Shell +
# WindowsAndMessaging: launch and window focus for native voice commands
# (native_actions).
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3"
