[package]
name = "murmur-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI interface for Murmur voice-to-text tool"

[features]
default = []
full = ["murmur-core/full"]

[[bin]]
name = "murmur"
path = "src/main.rs"

[dependencies]
murmur-core.workspace = true
clap = { version = "4", features = ["derive"] }
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
