[package]
name = "murmur-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI interface for Murmur voice-to-text tool"

[features]
default = []
full = ["murmur-core/full"]

[[bin]]
name = "murmur"
path = "src/main.rs"

[dependencies]
murmur-core = { workspace = true, features = ["indexer", "treesitter"] }
clap = { version = "4", features = ["derive"] }
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
cpal = "0.15"

# MCP stdio server (`murmur mcp`): exposes local transcription history to
# Claude Desktop / Cursor. Pure-Rust, local stdio transport only.
rmcp = { version = "1", features = ["server", "macros", "transport-io", "schemars"] }
serde.workspace = true
serde_json.workspace = true
dirs = "6"
