[package]
name = "murmur-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI interface for Murmur voice-to-text tool"

[features]
default = []
full = ["murmur-core/full"]
# GPU backends for whisper.cpp (pick one). Forward to murmur-core; the CLI
# transcribe path uses whichever backend the model was compiled against.
cuda = ["murmur-core/cuda"]
vulkan = ["murmur-core/vulkan"]

[[bin]]
name = "murmur"
path = "src/main.rs"

[dependencies]
murmur-core = { workspace = true, features = ["indexer", "treesitter"] }
murmur-mcp.workspace = true
clap = { version = "4", features = ["derive"] }
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
cpal = "0.15"
# WAV decoding for the offline `transcribe` subcommand.
hound = "3.5.1"
