[package]
name = "murmur-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core library for Murmur voice-to-text tool"

[features]
default = ["audio", "keyboard"]
# Enable all features (requires cmake + libclang for whisper.cpp, ONNX Runtime for VAD + Parakeet)
full = ["audio", "stt", "vad", "keyboard", "parakeet"]
# Audio capture via CPAL
audio = ["dep:cpal"]
# Speech-to-text via whisper.cpp (requires cmake + libclang)
stt = ["dep:whisper-rs"]
# CUDA GPU acceleration for whisper.cpp (requires CUDA toolkit + nvcc at
# build time, NVIDIA driver + CUDA runtime DLLs at run time)
cuda = ["stt", "whisper-rs/cuda"]
# Voice activity detection via ONNX Runtime. Requires `audio` for the
# in-tree resampler used to feed Silero v5 at its required 16 kHz.
vad = ["audio", "dep:ort", "dep:zip", "dep:flate2", "dep:tar"]
# Parakeet STT backend via ONNX Runtime (also needs ort directly for init_from)
parakeet = ["dep:parakeet-rs", "dep:ort", "dep:zip", "dep:flate2", "dep:tar"]
# Keystroke simulation
keyboard = ["dep:enigo"]

[dependencies]
# Audio (optional — needs system audio libs)
cpal = { version = "0.15", optional = true }

# STT (optional — needs cmake + libclang to build whisper.cpp)
whisper-rs = { version = "0.15", optional = true }

# VAD (optional — needs ONNX Runtime, load-dynamic avoids MSVC STL version issues)
ort = { version = "2.0.0-rc.11", optional = true, features = ["load-dynamic"] }

# Parakeet STT (optional — uses ONNX Runtime with DirectML GPU acceleration on Windows)
parakeet-rs = { workspace = true, optional = true, features = ["load-dynamic", "directml"] }

# ZIP extraction (optional — for downloading ONNX Runtime DLL on Windows)
zip = { workspace = true, optional = true }

# TGZ extraction (optional — for downloading ONNX Runtime on macOS/Linux)
flate2 = { workspace = true, optional = true }
tar = { workspace = true, optional = true }

# Output
enigo = { version = "0.6", optional = true }
arboard = "3"

# Hotkeys
global-hotkey = "0.6"

# Async
tokio.workspace = true

# Serialization & Config
serde.workspace = true
toml.workspace = true

# Logging
tracing.workspace = true

# Error handling
anyhow.workspace = true

# Utilities
dirs = "6"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
indicatif = "0.17"
