[package]
name = "murmur-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core library for Murmur voice-to-text tool"

[features]
default = ["audio", "keyboard"]
# Enable all features (requires cmake + libclang for whisper.cpp, ONNX Runtime for VAD + Parakeet)
full = ["audio", "stt", "vad", "keyboard", "parakeet", "indexer", "treesitter", "help"]
# Audio capture via CPAL
audio = ["dep:cpal"]
# Speech-to-text via whisper.cpp (requires cmake + libclang)
stt = ["dep:whisper-rs"]
# Local LLM runtime via llama.cpp (requires cmake + libclang, mirrors stt).
# CPU only; GPU backends stay off until exposed deliberately.
llm = ["dep:llama-cpp-2"]
# CUDA GPU acceleration for whisper.cpp (requires CUDA toolkit + nvcc at
# build time, NVIDIA driver + CUDA runtime DLLs at run time)
cuda = ["stt", "whisper-rs/cuda"]
# Vulkan GPU acceleration for whisper.cpp: cross-vendor alternative to CUDA
# (any Vulkan 1.2+ GPU — AMD, Intel, NVIDIA). Requires the Vulkan SDK (glslc
# for shader compilation) at build time and a Vulkan driver at run time.
# Mutually exclusive with `cuda` in practice: pick one GPU backend per build.
vulkan = ["stt", "whisper-rs/vulkan"]
# Voice activity detection via ONNX Runtime. Requires `audio` for the
# in-tree resampler used to feed Silero v5 at its required 16 kHz.
vad = ["audio", "dep:ort", "dep:zip", "dep:flate2", "dep:tar"]
# Parakeet STT backend via ONNX Runtime (also needs ort directly for init_from)
parakeet = ["dep:parakeet-rs", "dep:ort", "dep:zip", "dep:flate2", "dep:tar"]
# Local speaker diarization via NVIDIA Sortformer v2 (roadmap feature 6). Runs
# on the same ORT runtime the Parakeet STT path already loads (parakeet-rs's
# `sortformer` module is pure Rust over `ort` + ndarray + rustfft), so it adds
# no new native library — it just reuses the `parakeet` ONNX stack. Deliberately
# opt-in and NOT part of `full`: the meeting workflow is a distinct mode.
diarization = ["parakeet", "parakeet-rs/sortformer"]
# Keystroke simulation
keyboard = ["dep:enigo"]
# Opt-in BYO-key cloud rewrite backend (roadmap feature 10). Strictly off by
# default and deliberately NOT part of `full`: enabling it only compiles the
# code; a request additionally requires the config opt-in and the
# MURMUR_CLOUD_API_KEY environment variable at call time.
cloud = ["reqwest/json"]
# Local Help retrieval: semantic search over bundled help articles via a small
# ONNX sentence embedder (reuses the ORT runtime the STT path already loads).
help = ["dep:ort", "dep:tokenizers", "dep:zip", "dep:flate2", "dep:tar"]
# Codebase-derived vocabulary: lexical project indexer (gitignore-aware walk + regex)
indexer = ["dep:ignore", "dep:regex"]
# Tree-sitter symbol extraction for the indexer (AST-accurate; needs a C compiler
# to build the bundled grammars). Falls back to the lexical scan when off.
treesitter = [
    "indexer",
    "dep:tree-sitter",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-python",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-go",
    "dep:tree-sitter-java",
]

[dependencies]
# Audio (optional — needs system audio libs)
cpal = { version = "0.15", optional = true }

# STT (optional — needs cmake + libclang to build whisper.cpp)
whisper-rs = { version = "0.15", optional = true }

# Local LLM (optional — builds llama.cpp via cmake, same native pattern as
# whisper-rs). Exact pin: upstream says it does not follow semver meaningfully;
# re-test on every bump. default-features off keeps the build CPU-only and
# drops OpenMP; `common` builds llama.cpp's `common/` helper library, which
# carries the GBNF grammar sampler used for constrained tool selection.
llama-cpp-2 = { version = "=0.1.150", optional = true, default-features = false, features = ["common"] }

# VAD (optional — needs ONNX Runtime, load-dynamic avoids MSVC STL version issues)
ort = { version = "2.0.0-rc.11", optional = true, features = ["load-dynamic"] }

# Help embedder tokenizer (optional — bge-small WordPiece, loaded from bundled
# JSON). default-features = false drops esaxx_fast (a C++ training dep that links
# with the static CRT and clashes with whisper.cpp's dynamic CRT); inference-only
# encoding needs none of the default features, and bge uses no regex pretokenizer.
tokenizers = { version = "0.22", optional = true, default-features = false, features = [
    "fancy-regex",
] }

# Parakeet STT (optional — ONNX Runtime). DirectML is Windows-only and added
# via the target table below; other platforms use the default CPU provider.
parakeet-rs = { workspace = true, optional = true, features = ["load-dynamic"] }

# ZIP extraction (optional — for downloading ONNX Runtime DLL on Windows)
zip = { workspace = true, optional = true }

# TGZ extraction (optional — for downloading ONNX Runtime on macOS/Linux)
flate2 = { workspace = true, optional = true }
tar = { workspace = true, optional = true }

# Output
enigo = { version = "0.6", optional = true }
arboard = "3"

# Hotkeys
global-hotkey = "0.6"

# Async
tokio.workspace = true

# Serialization & Config
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Logging
tracing.workspace = true

# Error handling
anyhow.workspace = true
thiserror = "2"

# Utilities
dirs = "6"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
indicatif = "0.17"

# Codebase indexer (optional — gitignore-aware walk + identifier extraction)
ignore = { version = "0.4", optional = true }
regex = { version = "1", optional = true }

# Tree-sitter AST extraction (optional — grammars compile C, decoupled from the
# core version via the tree-sitter-language ABI)
tree-sitter = { version = "0.24", optional = true }
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }

[dev-dependencies]
tempfile = "3"

# DirectML GPU execution provider for Parakeet — Windows only.
[target.'cfg(windows)'.dependencies]
parakeet-rs = { workspace = true, optional = true, features = ["directml"] }
# WASAPI: open the mic in communications mode so Windows applies its built-in
# echo cancellation. Used by audio::wasapi.
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Threading",
] }
