[package]
name = "murmur-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MCP stdio server and client setup for Murmur, shared by the CLI and desktop app"

[dependencies]
# Uses only murmur-core's history/config, but core needs its default features
# to compile; both consumers (CLI, app) already pull these, so it's free there.
murmur-core.workspace = true
rmcp = { version = "1", features = ["server", "macros", "transport-io", "schemars"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
dirs = "6"
