[package]
name = "voitex-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Tauri v2 desktop app for Voitex voice-to-text tool"

[features]
default = ["full"]
full = ["voitex-core/full"]

[lib]
name = "voitex_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
voitex-core.workspace = true
tauri = { version = "2", features = ["tray-icon"] }
serde.workspace = true
serde_json = "1"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
tauri-plugin-global-shortcut = "2"
enigo = "0.6"
arboard = "3"
