[package]
name = "voitex-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI interface for Voitex voice-to-text tool"

[features]
default = []
full = ["voitex-core/full"]

[[bin]]
name = "voitex"
path = "src/main.rs"

[dependencies]
voitex-core.workspace = true
clap = { version = "4", features = ["derive"] }
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
